--- a/angular2/index.html
+++ b/angular2/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title>Angular 2 Quickstart</title>
-    <script src="traceur-runtime.js"></script>
-    <script src="system@0.16.7.js"></script>
-    <script src="angular2.dev.js"></script>
+    <script src="lib/traceur-runtime.js"></script>
+    <script src="lib/system@0.16.7.js"></script>
+    <script src="lib/angular2.dev.js"></script>
 <body>
 
 <!-- The app component created in app.ts -->
