--- a/react/todo-list.html
+++ b/react/todo-list.html
@@ -48,7 +48,7 @@
 
             // 看todomvc里，react的例子也是这样来做，应该是官方推荐的作法：(@see https://github.com/tastejs/todomvc/blob/gh-pages/examples/react/js/app.jsx)
             // input若指定了value则用户输入值会被value值覆盖。
-            // 使用refs获取dom(应该是virtual-dom)并通过.value获取其输入
+            // 使用refs获取dom(debugger看是直接对应dom)并通过.value获取其输入
             // 通过直接给dom覆值来重置input的状态
             this.state.list.push(this.refs.input.getDOMNode().value);
             this.setState({ list: this.state.list });
