register custom element

--- a/web-component/img-slider.html
+++ b/web-component/img-slider.html
@@ -111,18 +111,29 @@
     </div>
 </template>
 
-<div class="img-slider">
+<img-slider>
     <img src="https://www.baidu.com/img/baidu_jgylogo3.gif?v=33154426.gif">
     <img src="https://www.baidu.com/img/baidu_jgylogo3.gif?v=33154426.gif">
     <img src="https://www.baidu.com/img/baidu_jgylogo3.gif?v=33154426.gif">
     <img src="https://www.baidu.com/img/baidu_jgylogo3.gif?v=33154426.gif">
-</div>
+</img-slider>
 
 <script>
     var template = document.querySelector('template');
-    var host = document.querySelector('.img-slider');
-    var root = host.createShadowRoot();
-    root.appendChild(document.importNode(template.content, true));
+
+    // Create a prototype for a new element that extends HTMLElement
+    var ImgSliderProto = Object.create(HTMLElement.prototype);
+
+    // Setup our Shadow DOM and clone the template
+    ImgSliderProto.createdCallback = function() {
+        var root = this.createShadowRoot();
+        root.appendChild(document.importNode(template.content, true));
+    };
+
+    // Register our new element
+    document.registerElement('img-slider', {
+        prototype: ImgSliderProto
+    });
 </script>
 
 </body>
