--- a/devicePixelRatio.html
+++ b/devicePixelRatio.html
@@ -6,27 +6,17 @@
     <!-- document.body.scrollWidth === window.screen.width when set: -->
     <meta name="viewport" content="width=device-width">
     <!--<meta name="viewport" content="width=1080">-->
-    <style>
-        body { margin: 0 }
-    </style>
 </head>
 <body>
     <script type="text/javascript">
-        document.write("window.devicePixelRadio");
-        document.write("<br/>");
+        document.write("window.devicePixelRadio: ");
         document.write(window.devicePixelRatio);
         document.write("<br/>");
-        document.write("window.screen.width");
-        document.write("<br/>");
+        document.write("window.screen.width: ");
         document.write(window.screen.width);
         document.write("<br/>");
-        document.write("document.body.scrollWidth");
-        document.write("<br/>");
-        document.write(document.body.scrollWidth);
-        document.write("<br/>");
-        document.write("window.getComputedStyle(document.body, null).width");
-        document.write("<br/>");
-        document.write(window.getComputedStyle(document.body, null).width);
+        document.write("document.documentElement.clientWidth: ");
+        document.write(document.documentElement.clientWidth);
     </script>
 </body>
 </html>
