--- a/devicePixelRatio.html
+++ b/devicePixelRatio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <!-- document.body.scrollWidth === window.screen.width when set: -->
-    <meta name="viewport" content="width=device-width">
+    <!--<meta name="viewport" content="width=device-width">-->
     <!--<meta name="viewport" content="width=1080">-->
 </head>
 <body>
