--- a/devicePixelRatio.html
+++ b/devicePixelRatio.html
@@ -5,7 +5,7 @@
     <title></title>
     <!-- document.body.scrollWidth === window.screen.width when set: -->
     <!--<meta name="viewport" content="width=device-width">-->
-    <!--<meta name="viewport" content="width=1080">-->
+    <meta name="viewport" content="width=1080">
 </head>
 <body>
     <script type="text/javascript">
